made background position fixed so it covers whole site

--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ body {
   gap: 20px;
   border-radius: 15px;
   padding: 25px;
-  height: 100vh;
+  height: 60vh;
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -142,6 +142,13 @@ h2 {
   font-weight: 600;
   border-radius: 20px;
   box-shadow: 0 5px 12px rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+#add-link {
   display: flex;
   justify-content: center;
   align-items: center;
